--- a/package.json
+++ b/package.json
@@ -12,7 +12,6 @@
     "astro": "^1.0.0-beta.20"
   },
   "dependencies": {
-    "@astrojs/vue": "^0.1.3",
-    "agnostic-vue": "^1.1.0"
+    "@astrojs/vue": "^0.1.3"
   }
 }
