--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "astro": "^1.0.0-beta.20"
   },
   "dependencies": {
-    "@astrojs/vue": "^0.1.3"
+    "@astrojs/vue": "^0.1.3",
+    "jspdf": "^2.5.1"
   }
 }
